--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -432,11 +432,6 @@ msgid "Show Delivery Date"
 msgstr "Liefertermin Anzeige"
 
 #. module: equitania
-#: field:sale.config.settings,default_show_address:0
-msgid "Show street and city in the partner search of the saleorder"
-msgstr "Zeige die Straße und den Ort der Partner Suche des Angebotes/Verkaufsauftrages an."
-
-#. module: equitania
 #: view:sale.config.settings:equitania.view_sale_config_settings
 msgid "Show street and city in the partner search of the saleorder [equitania]"
 msgstr "Zeige die Straße und den Ort der Partner Suche des Angebotes/Verkaufsauftrages an [equitania]"
@@ -491,9 +486,9 @@ msgid "The delivery date will be shown in the Sale Order"
 msgstr "Der Liefertermin wird im Angebot/Verkaufsauftrag angezeigt."
 
 #. module: equitania
-#: help:sale.config.settings,default_show_address:0
-msgid "This adds the street and the city to the results of the partner search of the sale order"
-msgstr "Zeigt die Straße und den Ort in den Ergebnissen der Partnersuche des Angebotes/Verkaufsauftrages an."
+#: field:sale.config.settings,default_show_address:0
+msgid "Show street and city in the partner search of the Sale and Purchase Order [equitania]"
+msgstr "Zeige die Straße und den Ort in den Verkaufs- und Einkaufsaufträgen an [equitania]"
 
 #. module: equitania
 #: view:res.partner:equitania.eq_partner_extension_form_view
@@ -678,13 +673,13 @@ msgstr "unknown"
 
 #. module: equitania
 #: help:sale.config.settings,default_search_only_company:0
-msgid "Only Companies will be shown in the Customer search of the Sale Order/Quotation."
-msgstr "Nur Unternehmen werden in der Kundensuche des Angebotes/Verkaufsauftrages angezeigt."
+msgid "Only Companies will be shown in the Customer search of the Sale and Purchase Order."f
+msgstr "Nur Unternehmen werden in der Partnersuche der Einkaufs- und Verkaufsaufträgen angezeigt."
 
 #. module: equitania
 #: field:sale.config.settings,default_search_only_company:0
-msgid "Only Search for Companies"
-msgstr "Suche auf Unternehmen beschränken."
+msgid "Only Search for Companies [equitania]"
+msgstr "Suche auf Unternehmen beschränken [equitania]"
 
 #. module: equitania
 #: view:sale.config.settings:equitania.view_sale_config_settings
