--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -650,6 +650,11 @@ msgid "Term of payment:"
 msgstr "Zahlungsbedingungen:"
 
 #. module: purchase
+#: view:purchase.report_purchasequotation_document
+msgid "Term of payment:"
+msgstr "Zahlungsbedingungen2"
+
+#. module: purchase
 #: view:website:purchase.report_purchaseorder_document
 msgid "Incoterm:"
 msgstr "Lieferbedingungen:"
