--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -715,7 +715,7 @@ msgstr "Auftragsbestätigung"
 #. module: equitania
 #: view:eq_open_sale_order_line:equitania.eq_open_sale_order_line_search_view
 msgid "Saleorder"
-msgstr "Saleorder"
+msgstr "Verkaufsauftrag"
 
 #. module: equitania
 #: model:ir.model,name:equitania.model_sale_order
@@ -1010,5 +1010,8 @@ msgstr "oder"
 msgid "other"
 msgstr "Andere"
 
-
+#. module: equitania
+#: model:ir.actions.report.xml,name:equitania.report_open_sale_order_line_action
+msgid "Open Sale Order Lines"
+msgstr "Offene Auftragspositionen"
 
