[CHG] Lieferschein-Report angepasst: - Die Spalte "Lieferdatum" für die Belegreferenz wird im Zustand "Geliefert" nichtmehr angezeigt - Die Spalte "Bestelldatum" für die Belegreferenz wurde vollständig ausgeblendet, da es im Dokumentenkopf schon gedruckt wird - Der Lieferschein heißt nurnoch Lieferschein, wenn er im Zustand "geliefert" steht, ansonsten heißt er nun Packliste - Die Information "Lieferdatum" wird im Dokumentenkopf nur noch beim Status "Geliefert" angezeigt

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -214,6 +214,11 @@ msgstr "Lieferschein:"
 
 #. module: equitania
 #: view:website:stock.report_picking
+msgid "Packing list:"
+msgstr "Packliste:"
+
+#. module: equitania
+#: view:website:stock.report_picking
 msgid "Seq."
 msgstr "Pos."
 
